feat: 新增kafka测试接口
